Prevent metric unit labels overlapping pod donut

--- a/app/styles/_core.less
+++ b/app/styles/_core.less
@@ -339,7 +339,7 @@
       vertical-align: -6px;
     }
     @media (min-width: 1400px) {
-      width: 240px;
+      width: 230px;
     }
   }
   .metrics-usage {
